--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tom-Inge Larsen
 
 # Short bio or description (displayed in the header)
-description: Skype for Business and Powershell person
+description: Skype for Business and Powershell person thingy
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/4574656?s=460&v=4
