--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tom-Inge Larsen
 
 # Short bio or description (displayed in the header)
-description: Skype for Business and Powershell person
+description: Notes to self
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/4574656?s=460&v=4
@@ -48,9 +48,6 @@ url: http://tomlarse.github.io
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
-
-plugins:
-  - jekyll-redirect-from
 
 #
 # !! You don't need to change any of the configuration flags below !!
