removed relative_permalinks

--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: true
+#relative_permalinks: true
 
 # Setup
 title:               Poole
 tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+url:                 https://blog.codesalot.com
 paginate:            1
 baseurl:             ""
 
